[~] Fixed issue with hamburger color on navbar on mobile devices

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1394,13 +1394,13 @@ body {
   border-top-color: #55b4d4;
 }
 .cid-rlz1EkjMg0 .navbar {
-  background: #ffffff;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rlz1EkjMg0 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #2e2e2e;
 }
 .cid-rlz1EkjMg0 a {
   font-style: normal;
@@ -1491,7 +1491,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rlz1EkjMg0 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1562,7 +1562,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rlz1EkjMg0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2309,13 +2309,13 @@ body {
   text-align: right;
 }
 .cid-rlz1EkjMg0 .navbar {
-  background: #ffffff;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rlz1EkjMg0 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #2e2e2e;
 }
 .cid-rlz1EkjMg0 a {
   font-style: normal;
@@ -2406,7 +2406,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rlz1EkjMg0 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2477,7 +2477,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rlz1EkjMg0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3633,13 +3633,13 @@ body {
   text-align: right;
 }
 .cid-rlz1EkjMg0 .navbar {
-  background: #ffffff;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rlz1EkjMg0 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #2e2e2e;
 }
 .cid-rlz1EkjMg0 a {
   font-style: normal;
@@ -3730,7 +3730,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rlz1EkjMg0 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3801,7 +3801,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rlz1EkjMg0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4424,13 +4424,13 @@ body {
   text-align: right;
 }
 .cid-rlz1EkjMg0 .navbar {
-  background: #ffffff;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rlz1EkjMg0 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #2e2e2e;
 }
 .cid-rlz1EkjMg0 a {
   font-style: normal;
@@ -4521,7 +4521,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rlz1EkjMg0 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4592,7 +4592,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rlz1EkjMg0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5029,13 +5029,13 @@ body {
   text-align: right;
 }
 .cid-rlz1EkjMg0 .navbar {
-  background: #ffffff;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-rlz1EkjMg0 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #2e2e2e;
 }
 .cid-rlz1EkjMg0 a {
   font-style: normal;
@@ -5126,7 +5126,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rlz1EkjMg0 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -5197,7 +5197,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rlz1EkjMg0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
